--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BasesAngular03</title>
+  <title>Cinepolis</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,6 +10,8 @@
 <body>
   <app-root></app-root>
   <hr>
-  <app-heroes-list><app-heroes-list>
+  <!--<app-heroes-list><app-heroes-list>-->
+  <!--<app-cinepolis></app-cinepolis>-->
+  <app-resistencias></app-resistencias>
 </body>
 </html>
